--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url=https://lingannakott-8000.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/
+backend_url=http://localhost:3030
 sentiment_analyzer_url=https://sentianalyzer.250mhwj4tyw3.us-south.codeengine.appdomain.cloud/
